--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,7 @@
 
 .wrap {
     display: flex;
-    width: 800px;
     height: 100vh;
-    margin: 0 auto;
     justify-content: center;
     align-items: center;
 }
@@ -25,7 +23,7 @@
 }
 
 .cell {
-    background-color: rgb(209, 110, 110, 0.7);
+    /* background-color: rgb(209, 110, 110, 0.7); */
     height: var(--cell-height);
     width: var(--cell-width);
     border: 1px solid black;
@@ -41,32 +39,103 @@
     height: calc(var(--cell-height) / 2);
     border: 5px solid black;
     border-radius: 50%;
+    animation: circleShowUp 0.6s ease-in;
+}
+
+.cross {
+    position: absolute;
+    height: var(--cell-height);
+    width: var(--cell-width);
+    border: 1px solid black;
+    animation: crossBoardHide 0.3s ease-in;
 }
 
 .cross::before {
     content: "";
     display: block;
     position: absolute;
-    width: calc(var(--cell-width) / 1.5);
-    height: 5px;
+    /* width: calc(var(--cell-width) / 1.5);
+    height: 5px; */
     border-radius: 2rem;
     background-color: black;
     transform: rotate(-45deg);
+    top: 50%;
     left: 0;
     right: 0;
     margin: auto;
+    animation: crossShowUp 0.6s ease-in;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
 }
 
 .cross::after {
     content: "";
     position: absolute;
     display: block;
-    width: calc(var(--cell-width) / 1.5);
-    height: 5px;
+    /* width: calc(var(--cell-width) / 1.5);
+    height: 5px; */
     border-radius: 2rem;
     background-color: black;
     transform: rotate(45deg);
+    top: 50%;
     left: 0;
     right: 0;
     margin: auto;
+    animation: crossShowUp 0.6s ease-in;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes circleShowUp {
+    0% {
+        height: var(--cell-height);
+        width: var(--cell-width);
+        border-radius: 0;
+    }
+    45% {
+        width: calc(var(--cell-width) / 3);
+        height: calc(var(--cell-height) / 3);
+        border-radius: 50%;
+    }
+    65% {
+        width: calc(var(--cell-width) / 1.5);
+        height: calc(var(--cell-height) / 1.5);
+        scale:(1.2);
+        border-radius: 50%;
+    }
+    100% {
+        width: calc(var(--cell-width) / 2);
+        height: calc(var(--cell-height) / 2);
+        border-radius: 50%;
+    }
+}
+
+@keyframes crossBoardHide {
+    from {
+        border: 5px solid black;
+    }
+    to {
+        width: 0;
+        height: 0;
+        border-radius: 50%;
+    }
+}
+
+@keyframes crossShowUp {
+    0% {
+        width: 0;
+        height: 0;
+    }
+    75% {
+        width: calc(var(--cell-width) / 1.1);
+        height: 5px;
+    }
+    90% {
+        width: calc(var(--cell-width) / 1.7);
+        height: 5px;
+    }
+    100% {
+        width: calc(var(--cell-width) / 1.5);
+        height: 5px;
+    }
 }
