--- a/css/base.css
+++ b/css/base.css
@@ -5,4 +5,6 @@
     list-style: none;
     line-height: 1.15;
     text-decoration: none;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
